fixed panel spacing issue

--- a/ApstrataSDK/apstrata/horizon/themes/horizon/Panel.css
+++ b/ApstrataSDK/apstrata/horizon/themes/horizon/Panel.css
@@ -1,6 +1,8 @@
 .horizon .panel {
 	background: #f5f5f5;
 
+	margin-left: 3px;
+
 	padding-top: 5px;
 	padding-bottom: 0px;
 	padding-left: 5px;
